Added figures and reformated the folder structure

--- a/notebooks/00-medial-imaging-data-analysis-101.ipynb
+++ b/notebooks/00-medial-imaging-data-analysis-101.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "Medical imaging is essential for diagnosing and treating various medical conditions. Different imaging modalities provide unique insights into the body's structure and function. Here are the most common types:\n",
     "\n",
-    "![title](images/Fig-00-Medical-imaging-overview.webp)\n",
+    "![title](https://raw.githubusercontent.com/EMPOWER2024/prewebinars/main/images/Fig-00-Medical-imaging-overview.webp)\n",
     "\n",
     "\n",
     "### X-ray\n",
