Figures are now embedded in the jpytr nb

--- a/notebooks/00-medial-imaging-data-analysis-101.ipynb
+++ b/notebooks/00-medial-imaging-data-analysis-101.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "Medical imaging is essential for diagnosing and treating various medical conditions. Different imaging modalities provide unique insights into the body's structure and function. Here are the most common types:\n",
     "\n",
-    "![title](images/00-Fig-Medical-Imaging-Overview.png)\n",
+    "![title](https://github.com/EMPOWER2024/prewebinars/blob/main/images/00-Fig-Medical-Imaging-Overview.png?raw=true)\n",
     "\n",
     "\n",
     "### X-ray\n",
