Added links for file formats.

--- a/notebooks/00-medial-imaging-data-analysis-101.ipynb
+++ b/notebooks/00-medial-imaging-data-analysis-101.ipynb
@@ -85,6 +85,7 @@
     "  - Supports a wide range of imaging modalities (e.g., X-ray, CT, MRI, Ultrasound).\n",
     "  - Facilitates interoperability between different medical imaging devices and systems.\n",
     "- **File Extension**: `.dcm`\n",
+    "- **Learn more**: [DICOM is easy](https://dicomiseasy.blogspot.com/2011/10/introduction-to-dicom-chapter-1.html)\n",
     "\n",
     "### NIfTI (Neuroimaging Informatics Technology Initiative)\n",
     "- **Description**: Commonly used format for storing brain imaging data, particularly in research.\n",
@@ -93,6 +94,7 @@
     "  - Includes metadata for image orientation and scaling.\n",
     "  - Widely used in neuroimaging studies and analysis tools.\n",
     "- **File Extensions**: `.nii`, `.nii.gz`\n",
+    "- **Learn more**: [nibabel](https://nipy.org/nibabel/)\n",
     "\n",
     "### Analyze\n",
     "- **Description**: An older format for storing biomedical images, primarily used in brain imaging.\n",
@@ -101,6 +103,7 @@
     "  - Stores 3D image data and metadata.\n",
     "  - Largely replaced by NIfTI but still encountered in legacy data.\n",
     "- **File Extensions**: `.hdr`, `.img`\n",
+    "- **Learn more**: [nibabel](https://nipy.org/nibabel/)\n",
     "\n",
     "### NRRD (Nearly Raw Raster Data)\n",
     "- **Description**: Flexible format for storing n-dimensional raster data, often used in medical imaging research.\n",
@@ -109,6 +112,7 @@
     "  - Supports various types of medical imaging data, including MRI and CT scans.\n",
     "  - Facilitates data exchange and processing in research environments.\n",
     "- **File Extensions**: `.nrrd`, `.nhdr`\n",
+    "- **Learn more**: [pynrrd](https://pynrrd.readthedocs.io/en/stable/background/about.html)\n",
     "\n",
     "### MHA/MHD (MetaImage)\n",
     "- **Description**: Format for storing medical images and associated metadata, commonly used in research.\n",
@@ -117,6 +121,7 @@
     "  - Supports large datasets and various imaging modalities.\n",
     "  - Allows easy manipulation and processing of medical images.\n",
     "- **File Extensions**: `.mhd`, `.mha`, `.raw`\n",
+    "- **Learn more**: [ITK MetaIO](https://itk.org/Wiki/ITK/MetaIO/Documentation)\n",
     "\n",
     "### JPEG/PNG/TIFF\n",
     "- **Description**: Common image formats used for medical images, particularly for reports and documentation.\n",
