Added dynamic downloads

--- a/notebooks/00-medial-imaging-data-analysis-101.ipynb
+++ b/notebooks/00-medial-imaging-data-analysis-101.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
@@ -248,7 +248,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "4f9f4b008af045658c5b3e491eb8f8cf"
+       "model_id": "6def37ca1b404f61b831b135bd508139"
       }
      },
      "metadata": {},
@@ -259,8 +259,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "File unzipped to /Users/x/Documents/Github/prewebinars/downloads/sample-medical-imaging-datasets\n",
-      "Zip file /Users/x/Documents/Github/prewebinars/downloads/sample-medical-imaging-datasets.zip has been deleted.\n"
+      "File unzipped to downloads/sample-medical-imaging-datasets\n",
+      "Zip file downloads/sample-medical-imaging-datasets.zip has been deleted.\n"
      ]
     }
    ],
@@ -306,15 +306,15 @@
     "    else:\n",
     "        print(f\"Failed to download file from {url}. Status code: {response.status_code}\")\n",
     "\n",
-    "\n",
+    "os.makedirs('downloads', exist_ok=True)\n",
     "download_and_unzip(url='https://empower2024.s3.eu-central-1.amazonaws.com/sample-medical-imaging-datasets.zip',\n",
-    "                   local_path='/Users/x/Documents/Github/prewebinars/downloads/sample-medical-imaging-datasets.zip')"
+    "                   local_path='downloads/sample-medical-imaging-datasets.zip')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-07T10:03:28.401003Z",
-     "start_time": "2024-08-07T10:03:15.777042Z"
+     "end_time": "2024-08-07T10:18:48.255194Z",
+     "start_time": "2024-08-07T10:18:35.230756Z"
     }
    }
   },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -337,16 +337,16 @@
      "text": [
       "Requirement already satisfied: pydicom in /Users/x/Library/Python/3.9/lib/python/site-packages (2.2.2)\r\n",
       "Requirement already satisfied: matplotlib in /Users/x/Library/Python/3.9/lib/python/site-packages (3.7.2)\r\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.1.0)\r\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (0.11.0)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (2.8.2)\r\n",
       "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (5.12.0)\r\n",
       "Requirement already satisfied: numpy>=1.20 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.22.4)\r\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (10.0.0)\r\n",
       "Requirement already satisfied: fonttools>=4.22.0 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (4.40.0)\r\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (10.0.0)\r\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.1.0)\r\n",
       "Requirement already satisfied: packaging>=20.0 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (23.1)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (0.11.0)\r\n",
-      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (3.0.9)\r\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.4.4)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (2.8.2)\r\n",
+      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in /Users/x/Library/Python/3.9/lib/python/site-packages (from matplotlib) (3.0.9)\r\n",
       "Requirement already satisfied: zipp>=3.1.0 in /Users/x/Library/Python/3.9/lib/python/site-packages (from importlib-resources>=3.2.0->matplotlib) (3.15.0)\r\n",
       "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.15.0)\r\n",
       "\r\n",
@@ -440,8 +440,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-07T10:09:41.742274Z",
-     "start_time": "2024-08-07T10:09:39.166022Z"
+     "end_time": "2024-08-07T10:19:07.570043Z",
+     "start_time": "2024-08-07T10:19:04.913888Z"
     }
    }
   },
