Complete the notebook

--- a/notebooks/00-medial-imaging-data-analysis-101.ipynb
+++ b/notebooks/00-medial-imaging-data-analysis-101.ipynb
@@ -15,11 +15,8 @@
     "5. **Reading Medical Imaging Data**\n",
     "6. **Preprocessing Medical Imaging Data**\n",
     "7. **Feature Extraction**\n",
-    "8. **Simple Analysis Pipeline**\n",
-    "9. **Resources for Further Learning**\n",
-    "10. **References**\n",
-    "11. **Acknowledgements**\n",
-    "12. **Homework**\n",
+    "8. **Resources for Further Learning**\n",
+    "9. **Homework**\n",
     "\n",
     "Each section builds on the previous ones, introducing progressively complex concepts and techniques. By the end, you will have a solid foundation in medical imaging data analysis and be well-prepared for more advanced topics.\n"
    ],
@@ -776,6 +773,22 @@
      "end_time": "2024-08-07T11:19:01.627954Z",
      "start_time": "2024-08-07T11:19:01.622360Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Resources for further learning\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
