Fixed figures and completed the notebook.

--- a/notebooks/00-medial-imaging-data-analysis-101.ipynb
+++ b/notebooks/00-medial-imaging-data-analysis-101.ipynb
@@ -39,30 +39,41 @@
     "- **Uses**: Detecting fractures, dental imaging, chest exams.\n",
     "- **Limitations**: Limited soft tissue detail, radiation exposure.\n",
     "\n",
+    "![x-ray](https://miro.medium.com/v2/resize:fit:1400/1*Yz5zxMkvmcA5HX3h0re68g.jpeg)\n",
+    "\n",
     "### Computed Tomography (CT)\n",
     "- **Principle**: Combines multiple X-ray images taken from different angles to create cross-sectional views.\n",
     "- **Uses**: Identifying tumors, guiding biopsies, assessing injuries.\n",
     "- **Limitations**: Radiation exposure, high cost, less soft tissue detail than MRI.\n",
+    "![ct](https://post.healthline.com/wp-content/uploads/2022/01/CT-scan-of-the-abdomen-and-pelvis-body2.jpg)\n",
     "\n",
     "### Magnetic Resonance Imaging (MRI)\n",
     "- **Principle**: Uses strong magnets and radio waves to generate detailed images of soft tissues.\n",
     "- **Uses**: Brain, spinal cord, muscle, and joint imaging.\n",
     "- **Limitations**: High cost, longer scan times, not suitable for patients with metal implants.\n",
     "\n",
+    "![mr](https://upload.wikimedia.org/wikipedia/commons/b/b2/MRI_of_Human_Brain.jpg)\n",
+    "\n",
+    "\n",
     "### Ultrasound\n",
     "- **Principle**: Uses high-frequency sound waves to produce real-time images.\n",
     "- **Uses**: Monitoring pregnancy, examining organs, guiding procedures.\n",
     "- **Limitations**: Operator-dependent, limited penetration in dense tissues, cannot image air-filled or bony structures well.\n",
+    "\n",
+    "![us](https://mtauburnobgyn.com/wp-content/uploads/2018/08/CRL_Crown_rump_lengh_12_weeks_ecografia_Dr._Wolfgang_Moroder.jpg)\n",
     "\n",
     "### Nuclear Medicine (including PET)\n",
     "- **Principle**: Uses radioactive tracers that emit gamma rays or positrons to visualize physiological processes.\n",
     "- **Uses**: Thyroid scans, bone scans, PET for cancer detection, heart disease, brain disorders.\n",
     "- **Limitations**: Radiation exposure, high cost, lower spatial resolution.\n",
     "\n",
+    "![PT](https://physicsworld.com/wp-content/uploads/2018/11/EXPLORER.jpg)\n",
+    "\n",
     "### Mammography\n",
     "- **Principle**: Low-dose X-rays specifically for breast imaging.\n",
     "- **Uses**: Early detection of breast cancer.\n",
-    "- **Limitations**: Discomfort, radiation exposure, potential for false positives/negatives.\n"
+    "- **Limitations**: Discomfort, radiation exposure, potential for false positives/negatives.\n",
+    "![mammo](https://media.npr.org/assets/img/2018/01/16/3d-mammo-11-944069372756f562de892080f6cf5a0c562ef7c5.jpg?s=1100&c=50&f=jpeg)"
    ],
    "metadata": {
     "collapsed": false
