Added extra resources

--- a/notebooks/00-medial-imaging-data-analysis-101.ipynb
+++ b/notebooks/00-medial-imaging-data-analysis-101.ipynb
@@ -789,15 +789,58 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Resources for further learning\n"
+    "### Resources for further learning\n",
+    "\n",
+    "1. **SimpleITK**\n",
+    "   - **Description**: A simplified layer built on top of ITK (Insight Segmentation and Registration Toolkit) for reading, processing, and writing medical images.\n",
+    "   - **Features**: Supports various medical image formats, provides image filtering, registration, and segmentation tools.\n",
+    "   - **Resources**:\n",
+    "     - [SimpleITK Documentation](https://simpleitk.readthedocs.io/en/master/)\n",
+    "     - [SimpleITK Notebooks](https://github.com/InsightSoftwareConsortium/SimpleITK-Notebooks)\n",
+    "\n",
+    "2. **PyRadiomics**\n",
+    "   - **Description**: A library for extracting radiomic features from medical images.\n",
+    "   - **Features**: Offers a wide range of feature classes, including first-order statistics, shape, and texture features.\n",
+    "   - **Resources**:\n",
+    "     - [PyRadiomics Documentation](https://pyradiomics.readthedocs.io/en/latest/)\n",
+    "     - [PyRadiomics GitHub](https://github.com/AIM-Harvard/pyradiomics)\n",
+    "\n",
+    "3. **Nilearn**\n",
+    "   - **Description**: A Python library for fast and easy statistical learning on neuroimaging data.\n",
+    "   - **Features**: Handles neuroimaging data formats like NIfTI, provides functions for machine learning and statistical analysis.\n",
+    "   - **Resources**:\n",
+    "     - [Nilearn Documentation](https://nilearn.github.io/)\n",
+    "     - [Nilearn Examples](https://nilearn.github.io/auto_examples/index.html)\n",
+    "\n",
+    "4. **FSL (FMRIB Software Library)**\n",
+    "   - **Description**: A comprehensive library of analysis tools for FMRI, MRI, and DTI brain imaging data.\n",
+    "   - **Features**: Tools for image processing, statistical analysis, and visualization.\n",
+    "   - **Resources**:\n",
+    "     - [FSL Documentation](https://fsl.fmrib.ox.ac.uk/fsl/fslwiki)\n",
+    "     - [FSL Course](https://fsl.fmrib.ox.ac.uk/fslcourse/)\n",
+    "\n",
+    "5. **3D Slicer**\n",
+    "   - **Description**: An open-source software platform for medical image informatics, image processing, and three-dimensional visualization.\n",
+    "   - **Features**: Extensive module support for analysis, segmentation, and visualization.\n",
+    "   - **Resources**:\n",
+    "     - [3D Slicer Documentation](https://slicer.readthedocs.io/en/latest/)\n",
+    "     - [3D Slicer Tutorials](https://www.slicer.org/wiki/Documentation/Nightly/Training)\n",
+    "\n",
+    "6. **ITK (Insight Segmentation and Registration Toolkit)**\n",
+    "   - **Description**: An open-source software system for image analysis.\n",
+    "   - **Features**: Powerful algorithms for segmentation and registration.\n",
+    "   - **Resources**:\n",
+    "     - [ITK Documentation](https://itk.org/ITK/help/index.html)\n",
+    "     - [ITK Examples](https://itk.org/ITKExamples/src/Documentation/)\n",
+    "\n",
+    "7. **OpenCV (Open Source Computer Vision Library)**\n",
+    "   - **Description**: A comprehensive library for computer vision, including many image processing functions.\n",
+    "   - **Features**: Real-time computer vision capabilities, support for a wide variety of image formats.\n",
+    "   - **Resources**:\n",
+    "     - [OpenCV Documentation](https://docs.opencv.org/master/)\n",
+    "     - [OpenCV Tutorials](https://docs.opencv.org/master/d9/df8/tutorial_root.html)\n",
+    "\n"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false
    }
