Fixed some issues with JPEG/PNG/TIFF descriptions

--- a/notebooks/00-medial-imaging-data-analysis-101.ipynb
+++ b/notebooks/00-medial-imaging-data-analysis-101.ipynb
@@ -92,7 +92,7 @@
     "  - Includes metadata such as patient information, imaging parameters, and study details.\n",
     "  - Supports a wide range of imaging modalities (e.g., X-ray, CT, MRI, Ultrasound).\n",
     "  - Facilitates interoperability between different medical imaging devices and systems.\n",
-    "- **File Extension**: `.dcm`\n",
+    "- **File Extension**: `.dcm` or '.ima'\n",
     "- **Learn more**: [DICOM is easy](https://dicomiseasy.blogspot.com/2011/10/introduction-to-dicom-chapter-1.html)\n",
     "\n",
     "### NIfTI (Neuroimaging Informatics Technology Initiative)\n",
@@ -132,7 +132,7 @@
     "- **Learn more**: [ITK MetaIO](https://itk.org/Wiki/ITK/MetaIO/Documentation)\n",
     "\n",
     "### JPEG/PNG/TIFF\n",
-    "- **Description**: Common image formats used for medical images, particularly for reports and documentation.\n",
+    "- **Description**: Common image formats used for medical images in reports and documentation.\n",
     "- **Features**:\n",
     "  - Suitable for 2D images like X-rays or ultrasound snapshots.\n",
     "  - Limited metadata support compared to specialized formats.\n",
