add open in colab

--- a/notebooks/02-wearable-data-analysis-101.ipynb
+++ b/notebooks/02-wearable-data-analysis-101.ipynb
@@ -6,6 +6,10 @@
         "id": "2wQInXY5TYLZ"
       },
       "source": [
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/christiangoelz/prewebinars/blob/wearable-notebook/notebooks/02-wearable-data-analysis-101.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>\n",
+        "\n",
         "# Introduction to Wearable Data\n",
         "\n",
         "Welcome to this introductory notebook on wearable data. This resource is designed to provide a comprehensive starting point for newcomers to the field. We begin by exploring \"raw\" data, such as accelerometer (ACC) and photoplethysmography (PPG) data, to gain insights into the underlying data sources of parameters provided by consumer-grade wearables. Additionally, we will exemplarily analyze Fitbit data to demonstrate data handling and processing techniques.\n",
@@ -16,7 +20,8 @@
         "2. **Consumer Wearable Data**\n",
         "3. **Useful Tools and Resources**\n",
         "\n",
-        "Each section builds on the previous ones, so it’s best to run this notebook cell by cell to ensure proper execution and understanding of the material.\n"
+        "Each section builds on the previous ones, so it’s best to run this notebook cell by cell to ensure proper execution and understanding of the material.\n",
+        "Click in the badge at the top to run this notebook in Google Colab.\n"
       ]
     },
     {
