add open in binder

--- a/notebooks/02-wearable-data-analysis-101.ipynb
+++ b/notebooks/02-wearable-data-analysis-101.ipynb
@@ -6,10 +6,6 @@
         "id": "2wQInXY5TYLZ"
       },
       "source": [
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/christiangoelz/prewebinars/blob/wearable-notebook/notebooks/02-wearable-data-analysis-101.ipynb\">\n",
-        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-        "</a>\n",
-        "\n",
         "# Introduction to Wearable Data\n",
         "\n",
         "Welcome to this introductory notebook on wearable data. This resource is designed to provide a comprehensive starting point for newcomers to the field. We begin by exploring \"raw\" data, such as accelerometer (ACC) and photoplethysmography (PPG) data, to gain insights into the underlying data sources of parameters provided by consumer-grade wearables. Additionally, we will exemplarily analyze Fitbit data to demonstrate data handling and processing techniques.\n",
@@ -21,7 +17,23 @@
         "3. **Useful Tools and Resources**\n",
         "\n",
         "Each section builds on the previous ones, so it’s best to run this notebook cell by cell to ensure proper execution and understanding of the material.\n",
-        "Click in the badge at the top to run this notebook in Google Colab.\n"
+        "\n",
+        "## Running the Notebook\n",
+        "\n",
+        "You have several options for running this notebook:\n",
+        "\n",
+        "- **Google Colab**: Requires a Google account.\n",
+        "  <a target=\"_blank\" href=\"https://colab.research.google.com/github/christiangoelz/prewebinars/blob/wearable-notebook/notebooks/02-wearable-data-analysis-101.ipynb\">\n",
+        "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "  </a>\n",
+        "\n",
+        "- **Binder**: No account is required, but it might be slower to start.\n",
+        "  <a target=\"_blank\" href=\"https://mybinder.org/v2/gh/christiangoelz/prewebinars/wearable-notebook?labpath=notebooks%2F02-wearable-data-analysis-101.ipynb\">\n",
+        "    <img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"/>\n",
+        "  </a>\n",
+        "\n",
+        "- **Download and Run Locally**: Download the notebook file and run it on your local machine. Ensure that you have Jupyter set up in your environment.\n",
+        "\n"
       ]
     },
     {
@@ -550,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -565,7 +577,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100  198M  100  198M    0     0  10.0M      0  0:00:19  0:00:19 --:--:-- 11.2M\n"
+            "100  198M  100  198M    0     0  10.2M      0  0:00:19  0:00:19 --:--:-- 11.6M\n"
           ]
         }
       ],
@@ -594,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "id": "avXHRHxazqec"
       },
@@ -607,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -631,7 +643,7 @@
               "      dtype=object)"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -672,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -772,7 +784,7 @@
               "188213  {'dateTime': '2021-05-24T00:01:06', 'value': {...  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -794,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -874,7 +886,7 @@
               "4  2021-05-24T00:01:06         69                 1"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -895,7 +907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -936,7 +948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -996,7 +1008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1020,7 +1032,7 @@
               "Name: dateTime, dtype: object"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1053,7 +1065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1075,6 +1087,10 @@
         }
       ],
       "source": [
+        "%matplotlib inline\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.style.use('ggplot')\n",
+        "\n",
         "# Extract data at one day\n",
         "hr_day = hr[hr['dateTime'].dt.date == pd.to_datetime('2021-07-31').date()]\n",
         "\n",
@@ -1107,7 +1123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1155,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 13,
       "metadata": {
         "id": "YxxRLck0YnH4"
       },
@@ -1166,7 +1182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1228,7 +1244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1320,7 +1336,7 @@
               "max    112.644737          2.986301"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1358,7 +1374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 16,
       "metadata": {
         "id": "eGwdv2USZRLs"
       },
