--- a/notebooks/04-wearable-data-analysis-101.ipynb
+++ b/notebooks/04-wearable-data-analysis-101.ipynb
@@ -149,7 +149,7 @@
         "id": "NHLjmN3819Zb"
       },
       "source": [
-        "We start with loading the data using the pandas library [1]. This library provides several predefined functions for I/O of common datatypes used in wearables (see here for an overview). The data is stored in csv Format and Pandas provides predefined function to read .csv files (see ):"
+        "We start with loading the data using the `pandas` library. This library provides several predefined functions for I/O of common datatypes used in wearables (see here for an overview). The data is stored in csv Format and `pandas` provides predefined function to read .csv files (see ):"
       ]
     },
     {
