--- a/notebooks/04-wearable-data-analysis-101.ipynb
+++ b/notebooks/04-wearable-data-analysis-101.ipynb
@@ -249,7 +249,7 @@
         "# Create a time vector for plotting based on the unix timestamps:\n",
         "acc['timestamp_seconds'] = acc['unix_timestamp'] - acc['unix_timestamp'].min()\n",
         "\n",
-        "# Plot 30seconds data for each axis\n",
+        "# Plot acc data for each axis\n",
         "fig, ax = plt.subplots(3, 1, figsize=(15, 5))\n",
         "ax[0].plot(acc['timestamp_seconds'], acc['acc_e4:x'], label='X-axis', color='r')\n",
         "ax[1].plot(acc['timestamp_seconds'], acc['acc_e4:y'], label='Y-axis', color='g')\n",
